Change project prefix

--- a/src/layout/layout-sidebar-left.html
+++ b/src/layout/layout-sidebar-left.html
@@ -2,12 +2,12 @@
 <div class="row">
   <div class="col-md-4">
 
-    <div crm-dashboard-container data-list="widgets" data-instance="instances.sidebar"></div>
+    <div avn-dashboard-container data-list="widgets" data-instance="instances.sidebar"></div>
 
   </div>
   <div class="col-md-8">
 
-    <div crm-dashboard-container data-list="widgets" data-instance="instances.main"></div>
+    <div avn-dashboard-container data-list="widgets" data-instance="instances.main"></div>
 
   </div>
 </div>
