--- a/src/layout/layout-sidebar-top-bottom.html
+++ b/src/layout/layout-sidebar-top-bottom.html
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="col-md-12">
 
-    <div crm-dashboard-container data-list="widgets" data-instance="instances.top"></div>
+    <div avn-dashboard-container data-list="widgets" data-instance="instances.top"></div>
 
   </div>
 </div>
@@ -10,12 +10,12 @@
 <div class="row">
   <div class="col-md-8">
 
-    <div crm-dashboard-container data-list="widgets" data-instance="instances.main"></div>
+    <div avn-dashboard-container data-list="widgets" data-instance="instances.main"></div>
 
   </div>
   <div class="col-md-4">
 
-    <div crm-dashboard-container data-list="widgets" data-instance="instances.sidebar"></div>
+    <div avn-dashboard-container data-list="widgets" data-instance="instances.sidebar"></div>
 
   </div>
 </div>
@@ -23,7 +23,7 @@
 <div class="row">
   <div class="col-md-12">
 
-    <div crm-dashboard-container data-list="widgets" data-instance="instances.bottom"></div>
+    <div avn-dashboard-container data-list="widgets" data-instance="instances.bottom"></div>
 
   </div>
 </div>
