--- a/src/layout/layout-sidebar-tops-bottoms.html
+++ b/src/layout/layout-sidebar-tops-bottoms.html
@@ -5,12 +5,12 @@
     <div class="row">
       <div class="col-md-6">
 
-        <div crm-dashboard-container data-list="widgets" data-instance="instances.top"></div>
+        <div avn-dashboard-container data-list="widgets" data-instance="instances.top"></div>
 
       </div>
       <div class="col-md-6">
 
-        <div crm-dashboard-container data-list="widgets" data-instance="instances.topRight"></div>
+        <div avn-dashboard-container data-list="widgets" data-instance="instances.topRight"></div>
 
       </div>
     </div>
@@ -18,7 +18,7 @@
     <div class="row">
       <div class="col-md-12">
 
-        <div crm-dashboard-container data-list="widgets" data-instance="instances.main"></div>
+        <div avn-dashboard-container data-list="widgets" data-instance="instances.main"></div>
 
       </div>
     </div>
@@ -26,12 +26,12 @@
     <div class="row">
       <div class="col-md-6">
 
-        <div crm-dashboard-container data-list="widgets" data-instance="instances.bottom"></div>
+        <div avn-dashboard-container data-list="widgets" data-instance="instances.bottom"></div>
 
       </div>
       <div class="col-md-6">
 
-        <div crm-dashboard-container data-list="widgets" data-instance="instances.bottomRight"></div>
+        <div avn-dashboard-container data-list="widgets" data-instance="instances.bottomRight"></div>
 
       </div>
     </div>
@@ -39,7 +39,7 @@
   </div>
   <div class="col-md-4">
 
-    <div crm-dashboard-container data-list="widgets" data-instance="instances.sidebar"></div>
+    <div avn-dashboard-container data-list="widgets" data-instance="instances.sidebar"></div>
 
   </div>
 </div>
