--- a/src/template/container.html
+++ b/src/template/container.html
@@ -1,7 +1,7 @@
 
-<div class="crm-dashboard-container-tools">
-	<crm-dashboard-select data-title="Add widget" data-items="list"
-		data-event="selectWidgetIndex"></crm-dashboard-select>
+<div class="avn-dashboard-container-tools">
+	<avn-dashboard-select data-title="Add widget" data-items="list"
+		data-event="selectWidgetIndex"></avn-dashboard-select>
 </div>
 
-<crm-dashboard-widget ng-repeat="widget in instance" data-details="widget"></crm-dashboard-widget>
+<avn-dashboard-widget ng-repeat="widget in instance" data-details="widget"></avn-dashboard-widget>
