--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,54 +1,54 @@
-.crm-dashboard .crm-dashboard-layout-tools {
+.avn-dashboard .avn-dashboard-layout-tools {
   margin-bottom: 15px;
 }
-.crm-dashboard .crm-dashboard-select-active {
+.avn-dashboard .avn-dashboard-select-active {
   font-weight: bold;
 }
-.crm-dashboard .crm-dashboard-container-tools {
+.avn-dashboard .avn-dashboard-container-tools {
   display: none;
   margin-bottom: 15px;
   color: #111;
   text-align: center;
 }
-.crm-dashboard .crm-dashboard-container-tools .crm-dashboard-select-active {
+.avn-dashboard .avn-dashboard-container-tools .avn-dashboard-select-active {
   font-weight: normal;
 }
-.crm-dashboard crm-dashboard-widget {
+.avn-dashboard avn-dashboard-widget {
   display: block;
   position: relative;
 }
-.crm-dashboard .crm-dashboard-widget-tools {
+.avn-dashboard .avn-dashboard-widget-tools {
   position: absolute;
   right: 0;
   display: none;
 }
-.crm-dashboard .crm-dashboard-widget-tools > * {
+.avn-dashboard .avn-dashboard-widget-tools > * {
   margin-right: 1em;
 }
-.crm-dashboard .crm-dashboard-widget-unwrap {
+.avn-dashboard .avn-dashboard-widget-unwrap {
   box-shadow: none !important;
   border: none !important;
   background: none !important;
 }
-.crm-dashboard .crm-dashboard-widget-unwrap .crm-dashboard-widget-title {
+.avn-dashboard .avn-dashboard-widget-unwrap .avn-dashboard-widget-title {
   display: none;
 }
-.crm-dashboard .crm-dashboard-widget-unwrap .crm-dashboard-widget-content {
+.avn-dashboard .avn-dashboard-widget-unwrap .avn-dashboard-widget-content {
   padding: 0 !important;
 }
-.crm-dashboard .crm-dashboard-widget-unwrap .crm-dashboard-widget-content > * > :first-child {
+.avn-dashboard .avn-dashboard-widget-unwrap .avn-dashboard-widget-content > * > :first-child {
   margin-top: 0 !important;
 }
-.crm-dashboard .crm-dashboard-widget-unwrap .crm-dashboard-widget-content > * > :last-child {
+.avn-dashboard .avn-dashboard-widget-unwrap .avn-dashboard-widget-content > * > :last-child {
   margin-bottom: 0 !important;
 }
-.crm-dashboard .crm-dashboard-widget-content {
+.avn-dashboard .avn-dashboard-widget-content {
   transition: opacity ease .25s;
 }
-.crm-dashboard.crm-dashboard-edit .crm-dashboard-layout-tools {
+.avn-dashboard.avn-dashboard-edit .avn-dashboard-layout-tools {
   display: inline-block;
 }
-.crm-dashboard.crm-dashboard-edit [crm-dashboard-container] {
+.avn-dashboard.avn-dashboard-edit [avn-dashboard-container] {
   min-height: 4em;
   border-radius: 3px;
   border: 3px dashed #ddd;
@@ -56,20 +56,20 @@
   margin-bottom: 15px;
   padding: 6px;
 }
-.crm-dashboard.crm-dashboard-edit .crm-dashboard-container-tools {
+.avn-dashboard.avn-dashboard-edit .avn-dashboard-container-tools {
   display: block;
 }
-.crm-dashboard.crm-dashboard-edit .crm-dashboard-widget-tools {
+.avn-dashboard.avn-dashboard-edit .avn-dashboard-widget-tools {
   display: inline-block;
 }
-.crm-dashboard.crm-dashboard-edit .crm-dashboard-widget-unwrap {
+.avn-dashboard.avn-dashboard-edit .avn-dashboard-widget-unwrap {
   border: 2px dotted #2aabd2 !important;
   background-color: #fff;
 }
-.crm-dashboard.crm-dashboard-edit .crm-dashboard-widget-unwrap .crm-dashboard-widget-title {
+.avn-dashboard.avn-dashboard-edit .avn-dashboard-widget-unwrap .avn-dashboard-widget-title {
   display: block;
 }
-.crm-dashboard.crm-dashboard-edit .crm-dashboard-widget-content {
+.avn-dashboard.avn-dashboard-edit .avn-dashboard-widget-content {
   opacity: .3;
 }
 /*# sourceMappingURL=style.css.map */
