--- a/src/css/style.less
+++ b/src/css/style.less
@@ -1,31 +1,31 @@
 
-.crm-dashboard {
+.avn-dashboard {
 
-  .crm-dashboard-layout-tools {
+  .avn-dashboard-layout-tools {
     margin-bottom: 15px;
   }
 
-  .crm-dashboard-select-active {
+  .avn-dashboard-select-active {
     font-weight: bold;
   }
 
-  .crm-dashboard-container-tools {
+  .avn-dashboard-container-tools {
     display: none;
     margin-bottom: 15px;
     color: #111;
     text-align: center;
 
-    .crm-dashboard-select-active {
+    .avn-dashboard-select-active {
       font-weight: normal; // No need to highlight the selected widget
     }
   }
 
-  crm-dashboard-widget {
+  avn-dashboard-widget {
     display: block;
     position: relative;
   }
 
-  .crm-dashboard-widget-tools {
+  .avn-dashboard-widget-tools {
     position: absolute;
     right: 0;
     display: none;
@@ -34,14 +34,14 @@
     }
   }
 
-  .crm-dashboard-widget-unwrap {
+  .avn-dashboard-widget-unwrap {
     box-shadow: none !important;
     border: none !important;
     background: none !important;
-    .crm-dashboard-widget-title {
+    .avn-dashboard-widget-title {
       display: none;
     }
-		.crm-dashboard-widget-content {
+		.avn-dashboard-widget-content {
       padding: 0 !important;
 			> * {
 				// Remove margin of the widget item content
@@ -55,17 +55,17 @@
     }
   }
 
-	.crm-dashboard-widget-content {
+	.avn-dashboard-widget-content {
 		transition: opacity ease .25s;
 	}
 
-  &.crm-dashboard-edit {
+  &.avn-dashboard-edit {
 
-    .crm-dashboard-layout-tools {
+    .avn-dashboard-layout-tools {
       display: inline-block;
     }
 
-    [crm-dashboard-container] {
+    [avn-dashboard-container] {
       min-height: 4em;
       border-radius: 3px;
       border: 3px dashed #ddd;
@@ -74,23 +74,23 @@
       padding: 6px;
     }
 
-    .crm-dashboard-container-tools {
+    .avn-dashboard-container-tools {
       display: block;
     }
 
-    .crm-dashboard-widget-tools {
+    .avn-dashboard-widget-tools {
       display: inline-block;
     }
 
-    .crm-dashboard-widget-unwrap {
+    .avn-dashboard-widget-unwrap {
       border: 2px dotted #2aabd2 !important;
       background-color: #fff;
-      .crm-dashboard-widget-title {
+      .avn-dashboard-widget-title {
         display: block;
       }
     }
 
-		.crm-dashboard-widget-content {
+		.avn-dashboard-widget-content {
 			opacity: .3;
 		}
 
