--- a/src/layout/layout-3columns.html
+++ b/src/layout/layout-3columns.html
@@ -2,17 +2,17 @@
 <div class="row">
   <div class="col-md-4">
 
-    <div crm-dashboard-container data-list="widgets" data-instance="instances.top"></div>
+    <div avn-dashboard-container data-list="widgets" data-instance="instances.top"></div>
 
   </div>
   <div class="col-md-4">
 
-    <div crm-dashboard-container data-list="widgets" data-instance="instances.main"></div>
+    <div avn-dashboard-container data-list="widgets" data-instance="instances.main"></div>
 
   </div>
 	<div class="col-md-4">
 
-    <div crm-dashboard-container data-list="widgets" data-instance="instances.sidebar"></div>
+    <div avn-dashboard-container data-list="widgets" data-instance="instances.sidebar"></div>
 
   </div>
 </div>
