--- a/src/layout/layout-main.html
+++ b/src/layout/layout-main.html
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="col-md-12">
 
-    <div crm-dashboard-container data-list="widgets" data-instance="instances.main"></div>
+    <div avn-dashboard-container data-list="widgets" data-instance="instances.main"></div>
 
   </div>
 </div>
